# uroboros

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
docs/: architecture.md
scripts/: concat_files.py  setup_dev.sh  smoke_test.py
src/uroboros/: __init__.py  main.py
src/uroboros/actor/: __init__.py  agent.py  introspect.py  patcher.py  tool_synth.py
src/uroboros/adversary/: __init__.py  fuzzer.py  generator.py  reproduce.py
src/uroboros/arbiter/: __init__.py  executor.py  metrics.py  sandbox.py
src/uroboros/core/: __init__.py  config.py  interfaces.py  types.py  utils.py
src/uroboros/evolver/: __init__.py  meta.py  optimizer.py
src/uroboros/llm/: __init__.py  client.py  cost_manager.py
src/uroboros/memory/: __init__.py  retrieval.py  skills.py  vector_db.py
tests/: conftest.py
tests/integration/: test_llm_connectivity.py
workflows/: ci.yml
